--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-h1{
+.main-content__title{
 	font-family: 'Oswald', sans-serif;
 }
 
-p{
+.main-content__subtitle{
 	font-family: 'Oswald', sans-serif;
 }
